Fixed styling so that text wraps properly + updated colors

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   margin: 30px auto;
   overflow: auto;
   min-height: 500px;
+  background-color: #79A7FF;
   border: 1px solid steelblue;
   padding: 30px;
   border-radius: 5px;
