--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -5,14 +5,12 @@
     margin-top: 30px;
     position: initial;
     justify-content: center;
-    align-items: center
+    align-items: center;
 }
 
 .preview {
-    display: block;
-    word-wrap: break-word;
-    width: max-content;
-    margin: auto;
+    display: inline-block;
     justify-content: center;
     align-items: center;
+    background-color: #79A7FF;
 }
